[package]
name = "compound_duration"
version = "1.1.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Convert seconds to compound duration (week, days, hours, minutes, seconds)"
documentation = "https://docs.rs/compound_duration/latest/compound_duration/"
homepage = "https://docs.rs/compound_duration/latest/compound_duration/"
repository = "https://github.com/nbari/compound_duration"
readme = "README.md"
keywords = ["time", "format", "duration", "compound", "seconds"]
categories = ["date-and-time"]
license-file = "LICENSE"
edition = "2018"

[badges]
travis-ci = { repository = "nbari/compound_duration", branch = "master" }
